@@ -1,3 +1,12 @@
+nenolod     2005/09/25 19:58:45 UTC	(20050925-2373)
+  Log:
+  Don't link a nickname if muptr->pass == NULL.
+  
+
+  Modified:
+	trunk/modules/nickserv/link.c (File Modified) 
+
+
 nenolod     2005/09/25 08:25:06 UTC	(20050925-2371)
   Log:
   Unbreak fantasy commands on P10. :P
